--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-    <head>  
-
+    <head> 
+        
+        <meta charset="utf-8"> 
+        <title>US Accidents Smart Visualizer</title>
+        <link rel = "stylesheet" href="styles.css">
     </head>
 
 
