--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
         <meta charset="utf-8"> 
         <title>US Accidents Smart Visualizer</title>
         <link rel = "stylesheet" href="styles.css">
+
     </head>
 
 
     <body>
-        Test
+       
+        <nav class = "navbar">
+            <ol>
+                <li class = "navItem">button 1</li>
+                <li class = "navItem">button 2</li>
+                <li class = "navItem">button 3</li>
+                <li class = "navItem">button 4</li>
+                <li class = "navItem">button 5</li>
+            </ol>
+        </nav>
+
+
     </body>
 
 </html>
