--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <body>
        
         <nav class = "navbar">
-            <ol>
-                <li class = "navItem">button 1</li>
-                <li class = "navItem">button 2</li>
-                <li class = "navItem">button 3</li>
-                <li class = "navItem">button 4</li>
-                <li class = "navItem">button 5</li>
-            </ol>
+            <a href="index.html" class="logo">
+                <img src="img/logo.png" alt="logo">
+            </a>
+            <ul class="nav-links">
+                <li class = "nav-item"><a href=#>button 1</a></li>
+                <li class = "nav-item"><a href=#>button 2</a></li>
+                <li class = "nav-item"><a href=#>button 3</a></li>
+                <li class = "nav-item"><a href=#>button 4</a></li>
+                <li class = "nav-item"><a href=#>button 5</a></li>
+            </ul>
         </nav>
 
 
