beginning of responsive navbar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
                 <li class = "nav-item"><a href=#topic3>Button 3</a></li>
              
             </ul>
+
+            <div class = "dropdown-menu">
+                <button class = "drop-button">butt<i class="fas fa-chevron-circle-down"></i></button>
+
+                <div class = "dropdown-content">
+                    <ul class="nav-links">
+                        <li class = "nav-item"><a href="#topic1">Button 1</a></li>
+                        <li class = "nav-item"><a href=#topic2>Button 2</a></li>
+                        <li class = "nav-item"><a href=#topic3>Button 3</a></li>
+                        <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
+                    </ul>
+
+                    <!--More buttons here-->
+                    
+                </div>
+            </div>
         </nav>
 
         <div class = "landing-page">
