--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
 
             <div class = "dropdown-menu">
-                <button class = "drop-button">butt<i class="fas fa-chevron-circle-down"></i></button>
+                <button class = "drop-button">button<i class="fas fa-chevron-circle-down"></i></button>
 
                 <div class = "dropdown-content">
                     <ul class="nav-links">
