fetched some data & trying some charts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel = "stylesheet" href="styles.css">
         <script src="https://kit.fontawesome.com/d158196d49.js" crossorigin="anonymous"></script>
         <title>US Accidents Smart Visualizer</title>
+        <link rel="icon" href="img/logo.png" type="image/x-icon">
         
 
     </head>
@@ -65,11 +66,11 @@
                 </div>
                 <div class="row" id = "context">
                     <div id="column-img">
-                        <img src ="img/crashed_car.jpg">
+                        <img src ="img/crashed_car.jpg" alt="Crashed car">
                     </div>
                     <div id="column-text"> <p>The number of fatal car crashes in the United States has declined, at least partially due to better safety measures and improved road design. In 2014, 32,675 Americans died in car crashes, roughly 10,000 fewer than there were In 2004.Still, traffic accidents remain a serious problem in this country, and in some states the issue is much more severe than in others.Nationwide, there were 10.2 deaths for every 100,000 people in 2014. In Wyoming, the most dangerous state for drivers, there were 25.7 deaths for every 100,000 people.
                         </p>
-                        <p><a href="#">Click Here To See The Stats</a></p>
+                        <p><a href="topic1.html">Click Here To See The Stats</a></p>
 
 
                         </div>
@@ -84,9 +85,9 @@
                 <div class="row">
                     <h2 class = "section-title">How Bad Weather Increases Driving Accidents</h2>
                 </div>
-                <div class="row" id= "context">
+                <div class="row">
                     <div id="column-img">
-                        <img src ="img/weather.jpg">
+                        <img src ="img/weather.jpg" alt="Bad weather condition">
                     </div>
                     <div id="column-text"> <p>According to the Federal Highway Administration (FHWA) out of nearly six million vehicular accidents that occur every year in the U.S., approximately 22 percent are weather-related. Nearly 6,000 people are killed and another 445,000 injured due to accidents that occur during bad weather.A weather-related accident is defined as one that occurs in any adverse condition such as sleet, snow, rain, fog, winds or on slick pavement. More accidents occur when the roads are wet following a rainstorm than in any other type of bad weather. Wet roads account for 73 percent of all weather-related accidents. Snow and sleet make up 17 percent of bad weather accidents with 13 percent occurring on icy roads. Only 3 percent of bad weather accidents are caused by foggy conditions.
                         
