first chart completed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="img/logo.png" alt="logo">
             </a>
             <ul class="nav-links">
-                <li class = "nav-item"><a href="#topic1">Source of Accidents</a></li>
+                <li class = "nav-item"><a href="#topic1">Most affected states</a></li>
                 <li class = "nav-item"><a href=#topic2>Button 2 longer text</a></li>
                 <li class = "nav-item"><a href=#topic3>Button 3 longer text</a></li>
              
@@ -30,7 +30,7 @@
                 <button class = "drop-button"><i class="fas fa-bars"></i></button>
 
                 <div class = "dropdown-content">
-                        <a href="#topic1">Source of Accidents</a>
+                        <a href="#topic1">Most affected states</a>
                         <a href=#topic2>Button 2 longer text</a>
                         <a href=#topic3>Button 3 longer text</a>
                         
@@ -70,7 +70,7 @@
                     </div>
                     <div id="column-text"> <p>The number of fatal car crashes in the United States has declined, at least partially due to better safety measures and improved road design. In 2014, 32,675 Americans died in car crashes, roughly 10,000 fewer than there were In 2004.Still, traffic accidents remain a serious problem in this country, and in some states the issue is much more severe than in others.Nationwide, there were 10.2 deaths for every 100,000 people in 2014. In Wyoming, the most dangerous state for drivers, there were 25.7 deaths for every 100,000 people.
                         </p>
-                        <p><a href="topic1.html">Click Here To See The Stats</a></p>
+                        <p><a href="topic1.php">Click Here To See The Stats</a></p>
 
 
                         </div>
