--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 
                         <br>
 
-                        <a href="https://github.com/isoon5/US-Accidents-Smart-Visualizer" target="_blank">
+                        <a href="documentation.html" target="_blank">
 
                             <h3>Documentation <i class="fas fa-code"></i></h3>
 
