--- a/documentation.html
+++ b/documentation.html
@@ -19,7 +19,7 @@
     <br>
     <br>
     <br>
-    <p><b>Website Description:</b> Website-ul pune la dispozitite utilizatorului o suita de charturi google, populate cu date relatate la Accidentele de masini din Statele Unite ale Americii. Datele colectate fac parte din perioada 2016-2019.<br> Criteriile
+    <p><b>Website Description:</b> Website-ul pune la dispozitie utilizatorului o suita de charturi google, populate cu date relatate la Accidentele de masini din Statele Unite ale Americii. Datele colectate fac parte din perioada 2016-2019.<br> Criteriile
         afisate in chart-uri sunt: numarul de accidente din fiecare din cele 50 de state si cauzele/factorii ce cauzeaza aceste accidente.
     </p>
     <br>
@@ -27,14 +27,14 @@
     <br>
     <br>
     <p><b>Interface:</b> Design-ul este unul simplist, fara feature-uri nefolositoare. Website-ul este responsive, prin urmare poate fi vizionat pe orice tip de ecran.<br> Acest lucru a fost realizat prin media queries in CSS.Butoanele sunt vizibile si intuitive,
-        la fel ca si navbar-ul care nu este incarcat si este locat in partea de sus a paginii.<br> Pe ecranele mai inguste butoanele navbar-ului vor fi gasite intr-un dropdown-menu.
+        la fel ca si navbar-ul care nu este incarcat si este localizat in partea superioara a paginii.<br> Pe ecranele mai inguste butoanele navbar-ului vor fi gasite intr-un dropdown-menu.
     </p>
     <br>
     <br>
     <br>
     <br>
     <p><b>MVC</b></p>
-    <p>Model: Se ocupa de interogarea bazei de date cu queri-uri relevante cerintelor utilizatorului.</p>
+    <p>Model: Se ocupa de interogarea bazei de date cu interogari relevante cerintelor utilizatorului.</p>
     <img src="./img/doc_model.JPG">
     <p>View: Returneaza datele din baza de date in format JSON pentru a putea fi reprezentate grafic.</p>
     <img src="./img/doc_view.JPG">
@@ -54,6 +54,14 @@
     <br>
     <br>
     <br>
+    <p><b>Export</b></p>
+    <p>Website-ul pune la dispozitie utilizatorului exportarea chart-urilor in 3 formate: .CSV, .PNG si .SVG. <br> Exportarea in format .CSV se realizeaza parsand array-ul primit de la server.<br> Pentru exportarea in format .PNG se foloseste tool-ul de
+        la Google .getImageUri().<br>Pentru formatul .SVG se foloseste un obiect de tip XMLSerializer pentru a seraliza chart-ul.
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
     <p><b>Used Technologies:</b></p>
     <ul>
         <p>Front-end</p>
@@ -62,19 +70,19 @@
         <li>Javascript</li>
         <p> - a fost folosit pentru a manipula chart-urile si a prelua anumite input-uri de la user, cat si pentru cateva efecte(cum ar fi sticky navbar on scroll)</p>
         <li>Google Charts API</li>
-        <p> - acest tool a fost folosit pentru a reprezenta vizual statisticile si datele asigurate de partea de backend</p>
+        <p> - acest tool a fost folosit pentru a reprezenta vizual statisticile si datele asigurate de partea de backend.</p>
         <img src="img/doc_charts.JPG">
         <li>AJAX</li>
         <p>- s-au folosit request-uri cu ajutorul obiectului XMLHttpRequest pentru a sincroniza partea de front cu partea de back. </p>
         <p>- au fost trimise input-urile user-ului catre server. </p>
-        <p>- au fost aduse datele relevante din partea de backend </p>
+        <p>- au fost aduse datele relevante din partea de backend. </p>
         <img src="img/ajax1.JPG">
         <img src="img/ajax2.JPG">
         <br>
         <p>Back-end</p>
         <li>PHP</li>
-        <p> - a fost folosit pentru a gestiona baza de date (prin obiectul PDO)</p>
-        <p> - a fost folosit pentru a aduce date relevante in format json</p>
+        <p> - a fost folosit pentru a gestiona baza de date (prin obiecte de tip PDO)</p>
+        <p> - a fost folosit pentru a formata datele relevante in format json.</p>
         <li>MySql</li>
         <p> - s-au folosit scripturi pentru a crea si popula tabelele. </p>
 
